--- a/lab-tools-prompting.ipynb
+++ b/lab-tools-prompting.ipynb
@@ -42,12 +42,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8c556c5e-b785-428b-8e7d-efd34a2a1adb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Retrying (Retry(total=4, connect=None, read=None, redirect=None, status=None)) after connection broken by 'ProtocolError('Connection aborted.', ConnectionResetError(10054, 'An existing connection was forcibly closed by the remote host', None, 10054, None))': /simple/langchain/\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install --upgrade --quiet langchain langchain-community"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d86d3514",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install --upgrade --quiet langchain langchain-community"
+    "from typing import Optional\n",
+    "from langchain.chains import LLMChain\n",
+    "from langchain.prompts import PromptTemplate\n",
+    "from langchain_experimental.autonomous_agents import BabyAGI\n",
+    "from langchain_openai import OpenAI, OpenAIEmbeddings"
    ]
   },
   {
@@ -60,15 +89,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "id": "5efb4170-b95b-4d29-8f57-09509f3ba6df",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import getpass\n",
     "import os\n",
-    "# os.environ[\"LANGCHAIN_TRACING_V2\"] = \"true\"\n",
-    "# os.environ[\"LANGCHAIN_API_KEY\"] = getpass.getpass()"
+    "\n",
+    "# Prompt for OpenAI API Key\n",
+    "OPENAI_API_KEY = input(\"Please enter your OpenAI API Key: \")\n",
+    "\n",
+    "# Prompt for SerpAPI Key\n",
+    "SERPAPI_API_KEY = input(\"Please enter your SerpAPI Key: \")\n",
+    "\n",
+    "# Set the environment variables\n",
+    "os.environ['OPENAI_API_KEY'] = OPENAI_API_KEY\n",
+    "os.environ['SERPAPI_API_KEY'] = SERPAPI_API_KEY"
    ]
   },
   {
@@ -88,15 +124,26 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 24,
+   "cell_type": "markdown",
    "id": "424be968-2806-4d1a-a6aa-5499ae20fac5",
    "metadata": {},
-   "outputs": [],
    "source": [
     "from langchain_community.llms import Ollama\n",
     "\n",
     "model = Ollama(model=\"phi3\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "0663963a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.chat_models import ChatOpenAI\n",
+    "\n",
+    "# Initialize the GPT-4 model\n",
+    "model = ChatOpenAI(model_name=\"gpt-4\", openai_api_key=OPENAI_API_KEY)\n"
    ]
   },
   {
@@ -111,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "4548e6fa-0f9b-4d7a-8fa5-66cec0350e5f",
    "metadata": {},
    "outputs": [
@@ -158,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "be77e780",
    "metadata": {},
    "outputs": [
@@ -168,7 +215,7 @@
        "20.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "2063b564-25ca-4729-a45f-ba4633175b04",
    "metadata": {},
    "outputs": [
@@ -213,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "id": "f02f1dce-76e7-4ca9-9bac-5af496131fe1",
    "metadata": {},
    "outputs": [],
@@ -238,8 +285,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "id": "f8623e03-60eb-4439-b57b-ecbcebc61b58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chain = prompt | model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "35d83b1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:     Started server process [17248]\n",
+      "INFO:     Waiting for application startup.\n",
+      "INFO:     Application startup complete.\n",
+      "ERROR:    [Errno 10048] error while attempting to bind on address ('0.0.0.0', 11434): only one usage of each socket address (protocol/network address/port) is normally permitted\n",
+      "INFO:     Waiting for application shutdown.\n",
+      "INFO:     Application shutdown complete.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from fastapi import FastAPI\n",
+    "import uvicorn\n",
+    "app = FastAPI()\n",
+    "\n",
+    "@app.get(\"/\")\n",
+    "async def read_root():\n",
+    "    return {\"message\": \"Hello World\"}\n",
+    "import threading\n",
+    "\n",
+    "def run_server():\n",
+    "    uvicorn.run(app, host=\"0.0.0.0\", port=11434)\n",
+    "\n",
+    "thread = threading.Thread(target=run_server)\n",
+    "thread.start()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "35922adb",
    "metadata": {},
    "outputs": [
     {
@@ -247,11 +340,11 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "    \"name\": \"add\",\n",
-      "    \"arguments\": {\n",
-      "        \"x\": 3,\n",
-      "        \"y\": 1132\n",
-      "    }\n",
+      "  \"name\": \"add\",\n",
+      "  \"arguments\": {\n",
+      "    \"x\": 3,\n",
+      "    \"y\": 1132\n",
+      "  }\n",
       "}\n"
      ]
     }
@@ -280,17 +373,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "id": "f129f5bd-127c-4c95-8f34-8f437da7ca8f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'name': 'multiply', 'arguments': {'x': 13.0, 'y': 4.0}}"
+       "{'name': 'multiply', 'arguments': {'x': 13, 'y': 4}}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "id": "faee95e0-4095-4310-991f-9e9465c6738e",
    "metadata": {},
    "outputs": [],
@@ -378,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "id": "d0ea3b2a-8fb2-4016-83c8-a5d3e78fedbc",
    "metadata": {},
    "outputs": [
@@ -388,7 +481,7 @@
        "15.0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "id": "0555b384-fde6-4404-86e0-7ea199003d58",
    "metadata": {},
    "outputs": [
@@ -419,7 +512,7 @@
        "53.83784653"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "id": "45404406-859d-4caa-8b9d-5838162c80a0",
    "metadata": {},
    "outputs": [
@@ -453,7 +546,7 @@
        " 'output': 53.83784653}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +580,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -501,7 +594,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
