--- a/lab-tools-prompting.ipynb
+++ b/lab-tools-prompting.ipynb
@@ -49,6 +49,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "2caa6b3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
+      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install --upgrade --quiet langchain langchain-community"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "897bc01e-cc2b-4400-8a64-db4aa56085d3",
    "metadata": {},
@@ -58,15 +77,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "id": "5efb4170-b95b-4d29-8f57-09509f3ba6df",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import getpass\n",
-    "import os\n",
-    "os.environ[\"LANGCHAIN_TRACING_V2\"] = \"true\"\n",
-    "os.environ[\"LANGCHAIN_API_KEY\"] = getpass.getpass()"
+    "from typing import Optional\n",
+    "from langchain.chains import LLMChain\n",
+    "from langchain.prompts import PromptTemplate\n",
+    "from langchain_experimental.autonomous_agents import BabyAGI\n",
+    "from langchain_openai import OpenAI, OpenAIEmbeddings"
    ]
   },
   {
@@ -87,23 +107,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "id": "3ce05889",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pip install langchain-community\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "424be968-2806-4d1a-a6aa-5499ae20fac5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "# Prompt for OpenAI API Key\n",
+    "OPENAI_API_KEY = input(\"Please enter your OpenAI API Key: \")\n",
+    "\n",
+    "# Prompt for SerpAPI Key\n",
+    "SERPAPI_API_KEY = input(\"Please enter your SerpAPI Key: \")\n",
+    "\n",
+    "# Set the environment variables\n",
+    "os.environ['OPENAI_API_KEY'] = OPENAI_API_KEY\n",
+    "os.environ['SERPAPI_API_KEY'] = SERPAPI_API_KEY\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "191b7ede",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\fmrol\\AppData\\Local\\Temp\\ipykernel_30884\\1427064109.py:3: LangChainDeprecationWarning: The class `Ollama` was deprecated in LangChain 0.3.1 and will be removed in 1.0.0. An updated version of the class exists in the :class:`~langchain-ollama package and should be used instead. To use it run `pip install -U :class:`~langchain-ollama` and import as `from :class:`~langchain_ollama import OllamaLLM``.\n",
-      "  model = Ollama(model=\"phi3\")\n"
+      "C:\\Users\\fmrol\\AppData\\Local\\Temp\\ipykernel_12956\\4205098035.py:4: LangChainDeprecationWarning: The class `ChatOpenAI` was deprecated in LangChain 0.0.10 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-openai package and should be used instead. To use it run `pip install -U :class:`~langchain-openai` and import as `from :class:`~langchain_openai import ChatOpenAI``.\n",
+      "  model = ChatOpenAI(model_name=\"gpt-4\", openai_api_key=OPENAI_API_KEY)\n"
      ]
     }
    ],
    "source": [
-    "from langchain_community.llms import Ollama\n",
+    "from langchain.chat_models import ChatOpenAI\n",
     "\n",
-    "model = Ollama(model=\"phi3\")"
+    "#init model\n",
+    "model = ChatOpenAI(model_name=\"gpt-4\", openai_api_key=OPENAI_API_KEY)\n"
    ]
   },
   {
@@ -118,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "id": "4548e6fa-0f9b-4d7a-8fa5-66cec0350e5f",
    "metadata": {},
    "outputs": [
@@ -174,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "id": "be77e780",
    "metadata": {},
    "outputs": [
@@ -184,7 +235,7 @@
        "20.0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 39,
    "id": "54015737",
    "metadata": {},
    "outputs": [
@@ -205,7 +256,7 @@
        "393.0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
    "id": "2063b564-25ca-4729-a45f-ba4633175b04",
    "metadata": {},
    "outputs": [
@@ -251,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 41,
    "id": "f02f1dce-76e7-4ca9-9bac-5af496131fe1",
    "metadata": {},
    "outputs": [],
@@ -276,10 +327,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f8623e03-60eb-4439-b57b-ecbcebc61b58",
+   "execution_count": 42,
+   "id": "5b0ab7bd",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "chain = prompt | model\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "f8623e03-60eb-4439-b57b-ecbcebc61b58",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:     Started server process [12956]\n",
+      "INFO:     Waiting for application startup.\n",
+      "INFO:     Application startup complete.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR:    [Errno 10048] error while attempting to bind on address ('0.0.0.0', 11434): solo se permite un uso de cada dirección de socket (protocolo/dirección de red/puerto)\n",
+      "INFO:     Waiting for application shutdown.\n",
+      "INFO:     Application shutdown complete.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from fastapi import FastAPI\n",
+    "import uvicorn\n",
+    "app = FastAPI()\n",
+    "\n",
+    "@app.get(\"/\")\n",
+    "async def read_root():\n",
+    "    return {\"message\": \"Hello World\"}\n",
+    "import threading\n",
+    "\n",
+    "def run_server():\n",
+    "    uvicorn.run(app, host=\"0.0.0.0\", port=11434)\n",
+    "\n",
+    "thread = threading.Thread(target=run_server)\n",
+    "thread.start()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "0e6b983e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"name\": \"add\",\n",
+      "  \"arguments\": {\n",
+      "    \"x\": 3,\n",
+      "    \"y\": 1132\n",
+      "  }\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "chain = prompt | model\n",
     "message = chain.invoke({\"input\": \"what's 3 plus 1132\"})\n",
@@ -304,10 +421,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "f129f5bd-127c-4c95-8f34-8f437da7ca8f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'multiply', 'arguments': {'x': 13, 'y': 4}}"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from langchain_core.output_parsers import JsonOutputParser\n",
     "\n",
@@ -343,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 47,
    "id": "faee95e0-4095-4310-991f-9e9465c6738e",
    "metadata": {},
    "outputs": [],
@@ -391,12 +519,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "d0ea3b2a-8fb2-4016-83c8-a5d3e78fedbc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "552.0"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "invoke_tool({\"name\": \"multiply\", \"arguments\": {\"x\": 3, \"y\": 5}})"
+    "invoke_tool({\"name\": \"multiply\", \"arguments\": {\"x\": 8, \"y\": 69}})"
    ]
   },
   {
@@ -411,10 +550,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "0555b384-fde6-4404-86e0-7ea199003d58",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "53.83784653"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "chain = prompt | model | JsonOutputParser() | invoke_tool\n",
     "chain.invoke({\"input\": \"what's thirteen times 4.14137281\"})"
@@ -432,10 +582,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "45404406-859d-4caa-8b9d-5838162c80a0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'multiply',\n",
+       " 'arguments': {'x': 13, 'y': 4.14137281},\n",
+       " 'output': 53.83784653}"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from langchain_core.runnables import RunnablePassthrough\n",
     "\n",
@@ -460,6 +623,93 @@
     "\n",
     "1. Provide few shot examples.\n",
     "2. Add error handling (e.g., catch the exception and feed it back to the LLM to ask it to correct its previous output)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "ca22a14d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'add', 'arguments': {'x': 5, 'y': -2}, 'output': 3}"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chain.invoke({\"input\": \"If Laura has 5 apples and Jason have 3 oranges, an Mary has four pears, but Laura gives 2 apples to Jason and Laura gets 1 orange from Mary, how many apples does Laura have?\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "95d3a62c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'add', 'arguments': {'x': 10, 'y': -1}, 'output': 9}"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chain.invoke({\"input\": \"If Laura has 5 apples and Jason have 3 oranges, an Mary has four pears, but Laura gives 2 apples to Jason and Laura gets 1 orange from Mary, how many pieces of fruit does the group have? Use natural language for your answer\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "721689f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "system_prompt = f\"\"\"\\\n",
+    "You are an assistant that has access to the following set of tools. \n",
+    "Here are the names and descriptions for each tool:\n",
+    "\n",
+    "{rendered_tools}\n",
+    "\n",
+    "Given the user input, return the name and input of the tool to use. \n",
+    "Return your response in natural language.\n",
+    "\n",
+    "The 'arguments' should be returned as a sentence that can be read by the user.\n",
+    "\"\"\"\n",
+    "\n",
+    "prompt = ChatPromptTemplate.from_messages(\n",
+    "    [(\"system\", system_prompt), (\"user\", \"{input}\")]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "964acef2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'add', 'arguments': {'x': 10, 'y': 1}, 'output': 11}"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chain.invoke({\"input\": \"If Laura has 5 apples and Jason have 3 oranges, an Mary has four pears, but Laura gives 2 apples to Jason and Laura gets 1 orange from Mary, how many pieces of fruit does the group have? Use natural language for your answer\"})"
    ]
   }
  ],
